// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен правильно отрендерить пустой лк для залогина 1`] = `
<div
  className="SalesEmptyListLk"
>
  <div
    className="SalesEmptyListLk__img SalesEmptyListLk__img-cars"
  />
  <div
    className="SalesEmptyListLk__header"
  >
    Продать — легко
  </div>
  <div
    className="SalesEmptyListLk__text"
  >
    <div>
      Добавьте объявление, и его увидят тысячи потенциальных покупателей.
    </div>
  </div>
  <div
    className="SalesEmptyListLk__buttons"
  >
    <Button
      className="SalesEmptyListLk__button SalesEmptyListLk__button_add"
      color="green"
      size="l"
      type="link"
      url="form_url"
      width="default"
    >
      Добавить объявление
    </Button>
  </div>
</div>
`;

exports[`должен правильно отрендерить пустой лк для незалогина 1`] = `
<div
  className="SalesEmptyListLk"
>
  <div
    className="SalesEmptyListLk__img SalesEmptyListLk__img-cars"
  />
  <div
    className="SalesEmptyListLk__header"
  >
    Продать — легко
  </div>
  <div
    className="SalesEmptyListLk__text"
  >
    <div>
      Добавьте объявление, и его увидят тысячи потенциальных покупателей.
    </div>
    <div>
      Войдите, чтобы получить доступ к своим объявлениям.
    </div>
  </div>
  <div
    className="SalesEmptyListLk__buttons"
  >
    <Button
      className="SalesEmptyListLk__button SalesEmptyListLk__button_add"
      color="green"
      size="l"
      type="link"
      url="form_url"
      width="default"
    >
      Добавить объявление
    </Button>
    <Button
      className="SalesEmptyListLk__button SalesEmptyListLk__button_auth"
      color="white"
      size="l"
      type="link"
      url="https://autoru_frontend.auth_domain/login/?r=https%3A%2F%2Fauto.ru%2Fmy%2Fcars%2F"
      width="default"
    >
      Войти
    </Button>
  </div>
</div>
`;
